--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,5 @@
-body {
-  font-family: 'Comfortaa';
-}
-
-a {
-  text-decoration: none;
-  color: black;
-}
-
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
